# compgrph

./: LIB_README.md  pyproject.toml
compgraph/: graph.py
compgraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: run_from_resource.py
tests/: test_examples.py  test_multiple.py  test_operations.py
